# apps/go-api/docs/swagger.json
@@ -382,7 +382,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.ListExpenseResponse"
+                            "$ref": "#/definitions/dto.ListExpenseWithCategoryResponse"
                         }
                     }
                 }
@@ -452,6 +452,77 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/dto.CountResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/expenses/get-by-year-month": {
+            "get": {
+                "description": "Returns all expenses by year and month from the database",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "expenses"
+                ],
+                "summary": "List all expenses by year and month",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Resident location ID",
+                        "name": "residentLocationId",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Year",
+                        "name": "year",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Month",
+                        "name": "month",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ListExpenseWithCategoryResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/expenses/get-years-and-months": {
+            "get": {
+                "description": "Returns all grouped expenses by year and month from the database",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "expenses"
+                ],
+                "summary": "List all grouped expenses by year and month",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Resident location ID",
+                        "name": "residentLocationId",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ListYearAndMonthResponse"
                         }
                     }
                 }
@@ -1294,6 +1365,67 @@
                 }
             }
         },
+        "dto.ExpenseWithCategoryResponse": {
+            "type": "object",
+            "required": [
+                "amount",
+                "category",
+                "category_id",
+                "created_at",
+                "description",
+                "id",
+                "month",
+                "resident_location_id",
+                "updated_at",
+                "userID",
+                "year"
+            ],
+            "properties": {
+                "amount": {
+                    "type": "number",
+                    "example": 150.5
+                },
+                "category": {
+                    "$ref": "#/definitions/dto.CategoryResponse"
+                },
+                "category_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "created_at": {
+                    "type": "string",
+                    "example": "2026-07-13T12:00:00Z"
+                },
+                "description": {
+                    "type": "string",
+                    "example": "Some text"
+                },
+                "id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "month": {
+                    "type": "integer",
+                    "example": 7
+                },
+                "resident_location_id": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "updated_at": {
+                    "type": "string",
+                    "example": "2026-07-13T12:00:00Z"
+                },
+                "userID": {
+                    "type": "string",
+                    "example": "123458697"
+                },
+                "year": {
+                    "type": "integer",
+                    "example": 2026
+                }
+            }
+        },
         "dto.HealthResponse": {
             "type": "object",
             "required": [
@@ -1338,7 +1470,7 @@
                 }
             }
         },
-        "dto.ListExpenseResponse": {
+        "dto.ListExpenseWithCategoryResponse": {
             "type": "object",
             "required": [
                 "data",
@@ -1348,7 +1480,7 @@
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/dto.ExpenseResponse"
+                        "$ref": "#/definitions/dto.ExpenseWithCategoryResponse"
                     }
                 },
                 "total": {
@@ -1411,6 +1543,20 @@
                 },
                 "total": {
                     "type": "integer"
+                }
+            }
+        },
+        "dto.ListYearAndMonthResponse": {
+            "type": "object",
+            "required": [
+                "data"
+            ],
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.YearAndMonthResponse"
+                    }
                 }
             }
         },
@@ -1732,6 +1878,28 @@
                 "user_id": {
                     "type": "string",
                     "example": "00000000-0000-0000-0000-000000000001"
+                }
+            }
+        },
+        "dto.YearAndMonthResponse": {
+            "type": "object",
+            "required": [
+                "expenses",
+                "month",
+                "year"
+            ],
+            "properties": {
+                "expenses": {
+                    "type": "integer",
+                    "example": 66
+                },
+                "month": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "year": {
+                    "type": "integer",
+                    "example": 2020
                 }
             }
         }
